@@ -12,6 +12,7 @@ S3method(plot,dynEGA.Individual)
 S3method(plot,dynEGA.Population)
 S3method(plot,hierEGA)
 S3method(plot,infoCluster)
+S3method(plot,invariance)
 S3method(plot,itemStability)
 S3method(plot,riEGA)
 S3method(print,EGA)
